# betterme.news

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  bun.lockb  design.excalidraw  docker-compose.yml  package-lock.json  package.json  requirements.txt
.husky/: pre-commit
admin_client/: app.vue  example.env  nuxt.config.ts  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
admin_server/: example.env  main.py  pyproject.toml  requirements.txt
admin_server/backend/: bot.py  crawl.py  crawlers.py
admin_server/core/: conf.py  event_handler.py  routes.py
admin_server/core/models/: __init__.py  posts.py  posttags.py  tags.py  users.py
admin_server/core/schemas/: __init__.py  enums.py  responses.py
admin_server/frontend/routers/: crawlers.py
admin_server/frontend/static/js/: ivolunteer_vn_post.js
admin_server/frontend/static/types/: enums.ts  responses.ts
admin_server/frontend/templates/: base.html  ivolunteer_vn_post.html
admin_server/frontend/types/: enums.ts  responses.ts
admin_server/scrap/: func.py
admin_server/scrap/ivolunteer_vn/: crawl.py  data_process.py
admin_server/scrap/khoahoc_tv/: khoahoc_tv.py
admin_server/services/: time_modules.py
admin_server/services/discord_bot/: conf.py  news.py
admin_server/services/facebook_bot/: conf.py  func.py
admin_server/services/tebi/: __init__.py
admin_server/tests/: test_sample.py
client/: .eslintrc.cjs  .gitignore  Dockerfile  astro.config.mjs  example.env  package-lock.json  package.json  prettier.config.cjs  tailwind.config.cjs  tsconfig.json
design/: admin_flow.excalidraw  architecture.excalidraw  database.excalidraw
nginx/: nginx.conf
others/: .pre-commit-config.yaml  create_sample_env.sh  export-requirements.sh  install.sh  model2ts.sh  server-requirements.sh  setup.sh  style-code-check.sh
server/: .pre-commit-config.yaml  Dockerfile  Procfile  example.env  main.py  pyproject.toml  requirements.txt  scripts.py
server/.github/workflows/: cleanup.yaml  deploy.yaml  deploy.yml
server/core/: conf.py  event_handler.py  routes.py  settings.py
server/core/database/: mongodb.py
server/core/models/: __init__.py  draft_posts.py  posts.py  posttags.py  scholarship_posts.py  secret_keys.py  users.py
server/core/schemas/: __init__.py  enums.py  responses.py
server/core/schemas/admin/: __init__.py  enums.py  responses.py
server/core/schemas/auth/: responses.py
server/core/schemas/common/: __init__.py  enums.py
server/core/schemas/user/: __init__.py  enums.py  responses.py
server/routers/: users.py
server/routers/admin/: ai.py  crawlers.py  draft_posts.py  posts.py
server/routers/auth/: __init__.py  auth.py  auth_handler.py  discord_oauth.py
server/routers/auth/schemas/: user.py
server/routers/user/: post.py  posts.py  tags.py
server/scrap/: func.py
server/scrap/ivolunteer_vn/: __init__.py  crawl.py  data_process.py
server/scrap/khoahoc_tv/: __init__.py  khoahoc_tv.py
server/services/: beanie_odm.py  gemini.py  text_convertion.py  time_modules.py
server/services/discord_bot/: conf.py  func.py  news.py
server/services/facebook_bot/: conf.py  func.py
server/services/tebi/: __init__.py
server/services/text_convertion/: __init__.py  camel_case.py  language.py  slug.py  unicode.py
server/services/tinify/: __init__.py
server/tests/: conftest.py
server/tests/unit/: test_ai.py  test_auth.py  test_posts.py
server/tests/unit/posts/: test_post_list.py
server/tests/unit/posts/__post_id__/: test_post.py
server/utils/: beanie_odm.py
server/utils/text_convertion/: __init__.py  processing.py
(+129 files in other folders)
