[tool.poetry]
name = "admin-server"
version = "0.1.0"
description = ""
authors = ["Khoi"]
readme = "README.md"
packages = [{include = "admin_server"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
scrapy = "^2.11.0"
jinja2 = "^3.1.2"
pydantic-settings = "^2.0.3"
wget = "^3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.5.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
