[tool.poetry]
name = "admin-server"
version = "0.1.0"
description = ""
authors = ["Khoi"]
readme = "README.md"
packages = [{include = "admin_server"}]

[tool.poetry.dependencies]
python = "^3.9.0"
fastapi = "^0.103.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
uvicorn = "^0.23.2"
scrapy = "^2.11.0"
jinja2 = "^3.1.2"
pydantic-settings = "^2.0.3"
wget = "^3.2"
discord-py = "^2.3.2"
beanie = "^1.22.6"
boto3 = "^1.28.63"
pillow = "^10.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.292"
mypy = "^1.5.1"
pytest = "^7.4.2"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"main.py" = ["F403"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
